--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,7 @@
       href="https://fonts.googleapis.com/css2?family=Dongle&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://video-react.github.io/assets/video-react.css"
-    />
+    <link rel="stylesheet" href="/styles/video-react.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap"
       rel="stylesheet"
