--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,7 @@
 
     <meta name="twitter:card" content="Summary" />
     <meta name="twitter:title" content="Mob Land" />
-    <meta
-      name="twitter:description"
-      content="Mob Land"
-    />
+    <meta name="twitter:description" content="Mob Land" />
     <meta name="twitter:site" content="@MobLandHQ" />
     <meta
       name="twitter:image"
