--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,maximum-scale=1"
     />
-    <title>Syn City Copperlaunch Leaderboard</title>
+    <title>Mob Land</title>
 
     <meta name="description" content="Mob Land" />
     <meta property="og:type" content="website" />
