--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
       href="https://use.fontawesome.com/releases/v6.0.0-beta1/css/all.css"
     />
     <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/glitch.css" />
   </head>
   <body class="d-flex flex-column h-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
