--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,9 @@
     <link rel="stylesheet" href="/styles/glitch.css" />
   </head>
   <body class="d-flex flex-column h-100">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      MOBLAND is the first-ever Mafia Metaverse. Displaying a stylized take on the world of modern syndicates, MOBLAND is free-to-play — play-to-earn.<br/>
+      You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script
       crossorigin
