Use grid instead of row

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,8 @@
   </head>
   <body class="d-flex flex-column h-100">
     <noscript>
-      MOBLAND is the first-ever Mafia Metaverse. Displaying a stylized take on the world of modern syndicates, MOBLAND is free-to-play — play-to-earn.<br/>
+      MOBLAND is the first-ever Mafia themed Metaverse backed by super angels, such as Justin Kan (co-founder of Twitch), Do Kwon (co-founder of Terra) and more.<br/>
+      It is developed by a team of industry experts from Disney, Ubisoft, Roblox, EA, Gameloft, Google, Yahoo and Twitter.<br/>
       You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script
