--- a/public/index.html
+++ b/public/index.html
@@ -82,14 +82,14 @@
       crossorigin
       src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"
     ></script>
-    <script
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@17/umd/react.development.js"
-    ></script>
-    <script
+    ></script> -->
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
-    ></script>
+    ></script> -->
 
     <!--    <script-->
     <!--      crossorigin-->
@@ -100,14 +100,14 @@
     <!--      src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"-->
     <!--    ></script>-->
 
-    <script
+    <!-- <script
       crossorigin
       src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/5.2.0/react-router-dom.min.js"
     ></script>
     <script
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin
-    ></script>
+    ></script> -->
     <!-- <script
       src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"
       type="application/javascript"
