--- a/public/index.html
+++ b/public/index.html
@@ -104,10 +104,10 @@
       crossorigin
       src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/5.2.0/react-router-dom.min.js"
     ></script>
-    <script
+    <!-- <script
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin
-    ></script>
+    ></script> -->
     <script
       src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"
       type="application/javascript"
