removing ether from index.html

--- a/public/index.html
+++ b/public/index.html
@@ -108,10 +108,10 @@
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin
     ></script> -->
-    <script
+    <!-- <script
       src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"
       type="application/javascript"
-    ></script>
+    ></script> -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/Base64/1.1.0/base64.min.js"
       integrity="sha512-gysqkfMGKYvQSEPi68aIzL4ffmrQ0I6azOoPJ+ocle8k1bblsHJh7QVVoy4HHQG2iPzvFmRbs81d8kkVSyCkjA=="
