--- a/public/index.html
+++ b/public/index.html
@@ -100,10 +100,10 @@
     <!--      src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"-->
     <!--    ></script>-->
 
-    <script
+    <!-- <script
       crossorigin
       src="https://cdnjs.cloudflare.com/ajax/libs/react-router-dom/5.2.0/react-router-dom.min.js"
-    ></script>
+    ></script> -->
     <!-- <script
       src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
       crossorigin
