--- a/public/index.html
+++ b/public/index.html
@@ -82,14 +82,14 @@
       crossorigin
       src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"
     ></script>
-    <script
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@17/umd/react.development.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
-    ></script>
+    ></script> -->
 
     <!--    <script-->
     <!--      crossorigin-->
