--- a/public/index.html
+++ b/public/index.html
@@ -78,10 +78,10 @@
       You need to enable JavaScript to run this app.</noscript
     >
     <div id="root"></div>
-    <script
+    <!-- <script
       crossorigin
       src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"
-    ></script>
+    ></script> -->
     <!-- <script
       crossorigin
       src="https://unpkg.com/react@17/umd/react.development.js"
