--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,10 @@
       href="https://fonts.googleapis.com/css2?family=Dongle&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/glitch.css" />
   </head>
