--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;800&family=VT323&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles/style.css" />
