--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,6 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;800&display=swap"
       rel="stylesheet"
@@ -46,10 +45,14 @@
       referrerpolicy="no-referrer"
     />
 
-    <link
+    <link 
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v6.0.0-beta1/css/all.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
+  
   </head>
   <body class="d-flex flex-column h-100">
     <noscript>
