updated dependencies and packages for react 18

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,6 @@
       Roblox, EA, Gameloft, Google, Yahoo and Twitter.<br />
       You need to enable JavaScript to run this app.</noscript
     >
-    <div id="root"></div>
+    <div id="app"></div>
   </body>
 </html>
